@@ -15,8 +15,6 @@ buildscript {
     }
 }
 
-import static groovyx.net.http.ContentType.*
-
 apply plugin: 'idea'
 
 ext {
@@ -87,7 +85,7 @@ ext {
                                         modules: ['']
             ],
             'groovy'                 : [version: groovyVersion,
-                                        group  : 'org.codehaus.groovy',
+                                        group  : 'org.apache.groovy',
                                         names  : ['groovy'],
                                         modules: ['', 'xml', 'swing', 'console', 'json', 'ant', 'sql', 'templates', 'nio', 'dateutil', 'macro']
             ],
@@ -111,7 +109,7 @@ ext {
                                         names  : ['springloaded'],
                                         modules: ['']
             ],
-            async                    : [version: asyncVersion,
+            'async'                  : [version: asyncVersion,
                                         group  : 'org.grails.plugins',
                                         names  : ['async', 'events'],
                                         modules: ['']
@@ -165,12 +163,12 @@ group = "org.grails"
 // directories created during the build which are related
 // to turning the workspace root into a GRAILS_HOME
 ext {
-    distInstallDir = file("$buildDir/dist-tmp")
-    homeDistDir = file("dist")
-    homeBinDir = file("bin")
-    homeConfDir = file("conf")
-    homeLibDir = file("lib")
-    homeSrcDir = file("src")
+    distInstallDir = new File(project.buildDir, "dist-tmp")
+    homeDistDir = new File(project.buildDir, "install/dist")
+    homeBinDir = new File(project.buildDir, "install/bin")
+    homeConfDir = new File(project.buildDir, "install/conf")
+    homeLibDir = new File(project.buildDir, "install/lib")
+    homeSrcDir = new File(project.buildDir, "install/src")
 }
 
 // Groovy is added as a dependency to both the 'groovy' and 'compile'
@@ -192,9 +190,9 @@ if (jointBuildGroovyJarProperty) {
         throw new GradleException("The groovy.jar system property points to ${jointBuildGroovyJar.absolutePath} which does not exist.")
     }
 } else {
-    groovyDependency = dependencies.create("org.codehaus.groovy:groovy:${groovyVersion}") {
-        exclude module: "commons-cli"
-        exclude module: "ant"
+    groovyDependency = dependencies.create("org.apache.groovy:groovy:${groovyVersion}") {
+        exclude module:"commons-cli"
+        exclude module:"ant"
     }
 }
 
@@ -223,15 +221,25 @@ if (isReleaseVersion) {
 }
 
 allprojects {
+
+    // FORCE UPGRADE OF GROOVY IN DEPENDENCIES TO GROOVY 4
+    configurations.configureEach {
+        resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+            if (details.requested.group == 'org.codehaus.groovy' && details.requested.name != 'groovy-bom') {
+                details.useTarget(group: 'org.apache.groovy', name: details.requested.name, version: groovyVersion)
+            }
+        }
+    }
+
     repositories {
         mavenLocal()
         mavenCentral()
-        maven { url "https://repo.grails.org/grails/core" }
-        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-        if (groovyVersion.endsWith('-SNAPSHOT')) {
+        maven { url = 'https://repo.grails.org/grails/core' }
+        maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
+        if(groovyVersion.endsWith('-SNAPSHOT')) {
             maven {
-                name 'JFrog OSS snapshot repo'
-                url 'https://oss.jfrog.org/oss-snapshot-local/'
+                name = 'ASF Snapshot repo'
+                url = 'https://repository.apache.org/content/repositories/snapshots'
             }
         }
     }
@@ -244,8 +252,8 @@ allprojects {
                 cacheChangingModulesFor cacheHours, 'hours'
                 eachDependency { DependencyResolveDetails details ->
                     //specifying a fixed version for all libraries with 'org.gradle' group
-                    if (details.requested.group == 'org.codehaus.groovy') {
-                        details.useVersion groovyVersion
+                    if (details.requested.group == 'org.apache.groovy') {
+                        details.useVersion(groovyVersion)
                     }
                     if (details.requested.group == "org.spockframework") {
                         details.useVersion(spockVersion)
@@ -258,7 +266,7 @@ allprojects {
     [Javadoc, Groovydoc].each {
         tasks.withType(it).all {
             // exclude problematic jar file from javadoc classpath
-            // http://www.adam-bien.com/roller/abien/entry/trouble_with_crippled_java_ee
+            // https://www.adam-bien.com/roller/abien/entry/trouble_with_crippled_java_ee
             if (classpath) {
                 classpath -= classpath.filter { it.name == 'javaee-web-api-6.0.jar' }
             }
@@ -293,22 +301,10 @@ allprojects {
 apply from: "gradle/idea.gradle"
 apply from: "gradle/dependency-licenses.gradle"
 
-tasks.withType(org.gradle.api.tasks.javadoc.Groovydoc) {
-    configure {
-        access = GroovydocAccess.PRIVATE
-        includeAuthor = true
-        includeMainForScripts = false
-        processScripts = false
-    }
-}
-
 subprojects { project ->
+
     version = grailsVersion
     group = "org.grails"
-
-    configurations {
-        documentation
-    }
 
     ext.isTestSuite = project.name.startsWith("grails-test-suite")
     ext.isCiBuild = project.hasProperty("isCiBuild") || System.getenv().get("CI") as Boolean
@@ -341,22 +337,17 @@ subprojects { project ->
 
     }
 
-    if (!project.hasProperty("artifactoryPublishPassword") && System.getenv("ARTIFACTORY_PASSWORD")) {
-        project.ext.artifactoryPublishPassword = System.getenv("ARTIFACTORY_PASSWORD")
-    }
-
     apply plugin: 'java-library'
     apply plugin: 'groovy'
-    if (!isTestSuite) {
-        apply plugin: 'maven-publish'
-        apply plugin: 'signing'
-    }
     apply plugin: 'eclipse'
     apply plugin: 'idea'
     apply plugin: 'project-report'
     apply from: "../gradle/dependency-licenses.gradle"
 
     if (!isTestSuite) {
+
+        apply plugin: 'maven-publish'
+        apply plugin: 'signing'
 
         java {
             withJavadocJar()
@@ -369,8 +360,8 @@ subprojects { project ->
                 repositories {
                     maven {
                         credentials {
-                            def u = System.getenv("ARTIFACTORY_USERNAME") ?: project.hasProperty("artifactoryPublishUsername") ? project.artifactoryPublishUsername : ''
-                            def p = System.getenv("ARTIFACTORY_PASSWORD") ?: project.hasProperty("artifactoryPublishPassword") ? project.artifactoryPublishPassword : ''
+                            def u = project.hasProperty("artifactoryPublishUsername") ? project.getProperty('artifactoryPublishUsername') : System.getenv("ARTIFACTORY_USERNAME")
+                            def p = project.hasProperty("artifactoryPublishPassword") ? project.getProperty('artifactoryPublishPassword') : System.getenv("ARTIFACTORY_PASSWORD")
                             username = u
                             password = p
                         }
@@ -407,7 +398,7 @@ subprojects { project ->
                             developer {
                                 id = 'puneetbehl'
                                 name = 'Puneet Behl'
-                                email = 'behlp@objectcomputing.com'
+                                email = 'behlp@unityfoundation.io'
                             }
                         }
                     }
@@ -432,13 +423,29 @@ subprojects { project ->
         tasks.withType(io.github.gradlenexus.publishplugin.InitializeNexusStagingRepository).configureEach {
             shouldRunAfter(tasks.withType(Sign))
         }
+
+        tasks.register("installToHomeDist", Upload) {
+            configuration = configurations.archives
+            repositories {
+                flatDir name: 'libs', dirs: distInstallDir
+            }
+        }
+
+        tasks.withType(PublishToMavenLocal).configureEach {
+            dependsOn installToHomeDist
+            doLast {
+                ant.copy(todir: homeDistDir, flatten: true, includeEmptyDirs: false) {
+                    fileset dir: distInstallDir
+                }
+            }
+        }
     }
 
     if (project.name == 'grails-dependencies') return
     if (project.name == 'grails-bom') return
 
-    sourceCompatibility = "1.11"
-    targetCompatibility = "1.11"
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 
     if (project.name =~ /^(grails-web|grails-plugin-|grails-test-suite|grails-test)/) {
         dependencies {
@@ -466,48 +473,27 @@ subprojects { project ->
                 "Implementation-Vendor": 'grails.org')
     }
 
-    tasks.withType(Jar) {
-        duplicatesStrategy = DuplicatesStrategy.INCLUDE
+    configurations {
+        documentation
+        meta
+        published.extendsFrom archives, meta
     }
 
-    configure([compileGroovy, compileTestGroovy]) {
-        groovyOptions.fork(memoryInitialSize: '128M', memoryMaximumSize: '1G')
-        groovyOptions.encoding = "UTF-8"
-        options.encoding = "UTF-8"
-    }
-
-    configure([compileJava, compileTestJava]) {
-        options.deprecation = true
-        options.debug = true
-    }
-
-    configure([groovydoc]) {
-        onlyIf({
-            !isTestSuite
-        })
-        classpath += configurations.documentation
-    }
-
-    configure([javadoc]) {
-        onlyIf {
-            !isTestSuite
-        }
-        options.encoding "UTF-8"
-        options.docEncoding "UTF-8"
-        options.charSet "UTF-8"
-        options.jFlags "-Xms64M", "-Xmx512M"
+    // common-logging is a problematic dependency that is often included in the classpath
+    configurations {
+        all*.exclude(group: 'commons-logging', module: 'commons-logging')
     }
 
     dependencies {
         documentation("org.fusesource.jansi:jansi:$jansiVersion")
         documentation("jline:jline:$jlineVersion")
-        documentation "org.codehaus.groovy:groovy-ant:$groovyVersion"
-        documentation "org.codehaus.groovy:groovy-cli-picocli:$groovyVersion"
-        documentation("com.github.javaparser:javaparser-core:$javaParserCoreVersion")
+        documentation "org.apache.groovy:groovy-ant:$groovyVersion"
+        documentation "org.apache.groovy:groovy-cli-picocli:$groovyVersion"
+        documentation ("com.github.javaparser:javaparser-core:$javaParserCoreVersion")
 
         api groovyDependency
 
-        testImplementation "org.codehaus.groovy:groovy-test-junit5:${groovyVersion}"
+        testImplementation "org.apache.groovy:groovy-test-junit5:${groovyVersion}"
         testImplementation "org.junit.jupiter:junit-jupiter-api:5.10.2"
         testImplementation "org.junit.platform:junit-platform-runner:1.10.2"
         testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.10.2"
@@ -526,11 +512,65 @@ subprojects { project ->
         }
     }
 
-    def debugArguments = ['-Xmx2g', '-Xdebug', '-Xnoagent', '-Djava.compiler=NONE',
-                          '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005']
+    def debugArguments = [
+            '-Xmx2g', '-Xdebug', '-Xnoagent', '-Djava.compiler=NONE',
+            '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005'
+    ]
+    def java17moduleReflectionCompatibilityArguments = [
+            '--add-opens=java.base/java.lang=ALL-UNNAMED',
+            '--add-opens=java.base/java.util=ALL-UNNAMED'
+    ]
 
-    tasks.withType(Test) {
+    tasks.withType(Test).configureEach {
         useJUnitPlatform()
+        jvmArgs += java17moduleReflectionCompatibilityArguments
+    }
+
+    tasks.withType(Jar) {
+        duplicatesStrategy = DuplicatesStrategy.INCLUDE
+    }
+
+    // Add the Groovy compiler options
+    tasks.withType(GroovyCompile).configureEach {
+        groovyOptions.fork(memoryInitialSize: '128M', memoryMaximumSize: '1G')
+        groovyOptions.encoding = "UTF-8"
+        options.encoding = "UTF-8"
+    }
+
+    tasks.withType(Groovydoc).configureEach {
+        onlyIf { !isTestSuite }
+        classpath += configurations.documentation
+        access = GroovydocAccess.PRIVATE
+        includeAuthor = true
+        includeMainForScripts = false
+        processScripts = false
+    }
+
+    tasks.withType(Javadoc).configureEach {
+        onlyIf { !isTestSuite }
+        classpath += configurations.documentation
+        // Using options.jFlags instead of closure otherwise it fails with MinimalJavadocOptions
+        options.encoding "UTF-8"
+        options.docEncoding "UTF-8"
+        options.charSet "UTF-8"
+        options.jFlags "-Xms64M", "-Xmx512M"
+    }
+
+    configure(javadoc) {
+        onlyIf { !isTestSuite }
+        classpath += configurations.documentation
+        // Using options.jFlags instead of closure otherwise it fails with MinimalJavadocOptions
+        options.encoding "UTF-8"
+        options.docEncoding "UTF-8"
+        options.charSet "UTF-8"
+        options.jFlags "-Xms64M", "-Xmx512M"
+    }
+
+    // task for running a single test with -DsingleTest.single=TestName singleTest
+    tasks.register("singleTest", Test) {
+        if (System.getProperty("debug.tests")) {
+            jvmArgs += debugArguments
+        }
     }
 
     test {
@@ -539,6 +579,7 @@ subprojects { project ->
             maxFailures = 20
             failOnPassedAfterRetry = true
         }
+
         testLogging {
             events "passed", "skipped", "failed"
 
@@ -548,6 +589,7 @@ subprojects { project ->
             showStackTraces true
         }
         excludes = ["**/*TestCase.class", "**/*\$*.class"]
+
         if (isCiBuild) {
             maxParallelForks = 2
             maxHeapSize = '768m'
@@ -558,51 +600,11 @@ subprojects { project ->
         } else {
             maxHeapSize = '1024m'
         }
+
         if (System.getProperty("debug.tests")) {
-            jvmArgs debugArguments
+            jvmArgs += debugArguments
         }
     }
-
-    task singleTest(type: Test) {
-        // task for running a single test with -DsingleTest.single=TestName singleTest
-        if (System.getProperty("debug.tests")) {
-            jvmArgs debugArguments
-        }
-    }
-
-    configurations {
-        meta
-        published.extendsFrom archives, meta
-        all*.exclude group: 'commons-logging', module: 'commons-logging'
-    }
-
-    if (!isTestSuite) {
-
-        task installToHomeDist(type: Upload) {
-            configuration = configurations.archives
-            repositories {
-                flatDir name: 'libs', dirs: distInstallDir
-            }
-        }
-
-        project.tasks.withType(org.gradle.api.publish.maven.tasks.PublishToMavenLocal) { org.gradle.api.publish.maven.tasks.PublishToMavenLocal t ->
-            t.dependsOn installToHomeDist
-            t.doLast {
-                ant.copy(todir: homeDistDir, flatten: true, includeEmptyDirs: false) {
-                    fileset dir: distInstallDir
-                }
-            }
-        }
-    }
-}
-
-task clean(type: Delete, group: 'build') {
-    delete buildDir,
-            homeBinDir,
-            homeConfDir,
-            homeDistDir,
-            homeLibDir,
-            homeSrcDir
 }
 
 // From this point on we need the subprojects to be fully configured, so force their full evaluation
@@ -619,20 +621,22 @@ apply {
     from 'gradle/findbugs.gradle'
 }
 
-task buildscriptDependencies(type: org.gradle.api.tasks.diagnostics.DependencyReportTask) {
+// Add a task to list the buildscript dependencies
+tasks.register('buildscriptDependencies', org.gradle.api.tasks.diagnostics.DependencyReportTask) {
     configurations = project.buildscript.configurations
 }
 
 [Javadoc, Groovydoc].each {
     tasks.withType(it).all {
         // exclude problematic jar file from javadoc classpath
-        // http://www.adam-bien.com/roller/abien/entry/trouble_with_crippled_java_ee
+        // https://www.adam-bien.com/roller/abien/entry/trouble_with_crippled_java_ee
         if (classpath) {
             classpath -= classpath.filter { it.name == 'javaee-web-api-6.0.jar' }
         }
     }
 }
 
+// Ensure that no insecure HTTP-based Maven repositories are defined
 project.afterEvaluate {
     allprojects.repositories.each { handler ->
         handler.each {
